k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  labels:
    project: web
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: auth.maslick.ru
      http:
        paths:
          - path: /
            backend:
              serviceName: keycloak
              servicePort: 8080
          - path: /auth
            backend:
              serviceName: keycloak
              servicePort: 8080
  tls:
    - secretName: tls-keycloak-cert
      hosts:
        - 'auth.maslick.ru'
